--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,5 +4,5 @@
   <p><%= project.title %></p>
   <p><%= project.subtitle %></p>
   <p><%= project.body %></p>
-  <%= image_tag project.thumb_image %>
+  <%= image_tag project.thumb_image unless project.thumb_image.nil? %>
 <% end %>
