--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,11 @@
 <h1>Projects</h1>
 
+<%= link_to  "Create new item", new_project_path %>
+
 <% @projects.each do |project| %>
-  <p><%= project.title %></p>
+  <h3><%= link_to project.title, project_path(project) %></h3>
   <p><%= project.subtitle %></p>
   <p><%= project.body %></p>
   <%= image_tag project.thumb_image unless project.thumb_image.nil? %>
+  <%= link_to  "Edit", edit_project_path(project) %>
 <% end %>
