--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar'%>
+    <%= render 'layouts/navbar', location: 'top' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
