--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,7 +22,7 @@
       <%= link_to 'Login', new_user_session_path %>
     <% end %>
     <%= yield %>
-    <%= render 'layouts/navbar'%>
+    <%= render 'layouts/navbar', location: 'bottom' %>
 
     <% if session[:source] %>
       <p>Thanks for visiting me from <%= session[:source] %></p>
