--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,12 +16,10 @@
     <p class="alert"><%= alert %></p>
 
     <%= login_helper %>
-    
+
     <%= yield %>
     <%= render 'layouts/navbar', location: 'bottom' %>
 
-    <% if session[:source] %>
-      <p>Thanks for visiting me from <%= session[:source] %></p>
-    <% end %>
+    <%= source_helper("blog") %>
   </body>
 </html>
