--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,20 +2,9 @@
 
 <h1>Blogs</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Date</th>
-      <th>Body</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= render @blogs %>
-  </tbody>
-</table>
+<div>
+  <%= render partial: @blogs, spacer_template: "blog_ruler" %>
+</div>
 
 <br>
 
